# readur

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.stress  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  fix_all_remaining_tests.sh  fix_config_fields.sh  grafana-dashboard.json  index.yaml  mkdocs.yml  package-lock.json  renovate.json  requirements.txt  stress-test-metrics.json
docs/: README.md  REVERSE_PROXY.md  WATCH_FOLDER.md  advanced-search.md  analytics-dashboard-guide.md  api-reference.md  architecture.md  backup-recovery.md  configuration-reference.md  configuration.md  deployment.md  file-upload-guide.md  gallery.md  health-monitoring-guide.md  index.md  installation.md  integrations.md  migration-guide.md  notifications-guide.md  office-document-support.md  oidc-setup.md  per-user-watch-directories.md  performance-tuning.md  postgres-upgrade.md  s3-storage-guide.md  s3-troubleshooting.md  security-guide.md  sources-guide.md  swagger-ui-guide.md  synology.md  troubleshooting.md  user-guide.md  user-management-guide.md  v2.6.0  webdav-enhanced-features.md
docs/dev/: README.md  (+6 more)
frontend/: .dockerignore  Dockerfile.dev  frontend_log.txt  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
migrations/: 20250813000001_add_webdav_scan_failures.sql  20250817000001_add_generic_source_scan_failures.sql  20250820000001_add_webdav_metrics.sql  20250823000001_remove_webdav_metrics_tables.sql  20250901000001_add_office_extraction_settings.sql  20250916000001_add_ocr_progress_fields.sql  20251001000001_add_knowledge_graph_tables.sql  20260322000001_add_shared_links.sql  20260322000002_add_document_comments.sql  20260421000001_add_api_keys.sql
scripts/: generate-webdav-test-data.sh  run-stress-tests.sh
src/: auth.rs  config.rs  cpu_allocation.rs  db_guardrails.rs  file_service.rs  lib.rs  lib.rs.backup  main.rs  ocr.rs  oidc.rs  rate_limit.rs  seed.rs  swagger.rs  test_helpers.rs  test_utils.rs
test_files/: create_exif_test_images.py  test_file.doc  test_file.docx
tests/: document_deletion_integration_tests.rs  document_upload_hash_duplicate_tests.rs  integration_admin_password_tests.rs  integration_api_contract_tests.rs  integration_api_keys_tests.rs  integration_auto_resume_tests.rs  integration_auto_rotate_exif_tests.rs  integration_cancellation_tests.rs  integration_config_oidc_tests.rs  integration_document_deletion_integration_tests.rs  integration_document_routes_tests.rs  integration_document_upload_hash_duplicate_tests.rs  integration_enhanced_ocr_tests.rs  integration_failed_ocr_endpoints_tests.rs  integration_file_processing_pipeline_tests.rs  integration_file_service_tests.rs  integration_hash_duplicate_detection_tests.rs  integration_health_check_tests.rs  integration_ignored_files_integration_tests.rs  integration_jwt_secret_tests.rs  integration_labels_tests.rs  integration_large_file_upload_tests.rs  integration_ocr_file_type_routing_tests.rs  integration_ocr_language_endpoints.rs  integration_ocr_pipeline_integration_test.rs  integration_ocr_queue_management_tests.rs  integration_ocr_retry_bug_regression_tests.rs  integration_ocr_retry_tests.rs  integration_ocrmypdf_strategy_validation_tests.rs  integration_office_document_extraction_tests.rs  integration_office_extraction.rs  integration_oidc_tests.rs  integration_pdf_image_detection_tests.rs  integration_pdf_word_count_tests.rs  integration_per_user_watch_directories_tests.rs  integration_role_based_access_control_tests.rs  integration_s3_sync_tests.rs  integration_search_pagination_tests.rs  integration_settings_tests.rs  integration_simple_throttling_test.rs  (+23 more)
(+379 files in other folders)
